--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="harsha.jpg" alt="harsha" height = "150" width = "200" class="center"/>
+<img src="harsha.jpg" alt="harsha" height = "150" width = "200" class="center">
 
 
 
