--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+
+
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Harsha</title>
+</head>
+<body>
 <img src="harsha.jpg" alt="harsha" height = "150" width = "200" class="center">
-
-
-
-
-
-
-Hey, I am Harsha Vardhan Guda. You can find my resume [here](https://drive.google.com/open?id=1JXQZv25PaiI0OQA5w9fvE2rqRlA9oaS1)
+ Hey, I am Harsha Vardhan Guda. You can find my resume [here](https://drive.google.com/open?id=1JXQZv25PaiI0OQA5w9fvE2rqRlA9oaS1)
 I am doing my Under Graduation in Electronics and Communication in National Institue of Technology Calicut. 
 I am enthusiastic about robotics and machine learning, and also an active member of Robotics Interest Group, NIT Calicut [RIG-NITC](http://www.rignitc.com/team-rig-nitc/)
-# Briefly about my projects
+<h1>Briefly about my projects</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html> 
+
+
+
+
+
+# 
 
 ### Riggu -Socially Interactive Robot
 RIGGU is a Semi Humanoid Interactive bot which is developed for different applications such as hospitality, treating autism, assisting aged people, etc. Semi-Humanoid robots are being widely used in applications ranging from household to commercial purposes. This paper discusses about development of a semi-humanoid robot platform for speech and image recognition, navigation based on Robot Operating System (ROS) which allows the users to interface the robot developed to add) extra peripherals which further gives the scope for development. RIGGU is integrated with features such as speech recognition and synthesis, facial and object recognition and navigation. For [code](https://github.com/harshavardhanguda/rigguv2), [paper](https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j)
