--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b{Drone Based Intelligent Surveillance And Disaster Management System</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June - 2019<span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>The drone has an on-board camera and processor to process the live feed of video-stream and is used in surveillance and tracking of objects/person.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Autonomous Navigation of Four Wheeled Base using Passive Encoders</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June - 2019<span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Navigation of a four wheeled base using passive encoders to achieve precise indoor location of robot and implement control loops for its navigation. Mathematically model the system and validate from the experimental data.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Interactive Robot for Reception and Medical Care (Project RIGGU)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May - 2018<span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>An interactive robot to receive people and assist them is developed using deep neural networks. It has capabilities such as face, object,emotion recognition, speech recognition and synthesis, all these are integrated using Robot Operating System(ROS) to make a sturdy system. </p><br>
         </div>
       </div>
