--- a/index.html
+++ b/index.html
@@ -89,13 +89,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Autonomous Navigation of Four Wheeled Base using Passive Encoders</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Navigation of a four wheeled base using passive encoders to achieve precise indoor location of robot and implement control loops for its navigation. Mathematically model the system and validate from the experimental data.</p>
+          <p>Navigation of a four wheeled base using passive encoders to achieve precise indoor location of robot and implement 
+            control loops for its navigation. Mathematically model the system and validate from the experimental data.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Interactive Robot for Reception and Medical Care (Project RIGGU)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>An interactive robot to receive people and assist them is developed using deep neural networks. It has capabilities such as face, object,emotion recognition, speech recognition and synthesis, all these are integrated using Robot Operating System(ROS) to make a sturdy system. </p><br>
+          <p>RIGGU is a Semi Humanoid Interactive bot which is developed for different applications such as hospitality, treating
+            autism, assisting aged people, etc. Semi-Humanoid robots are being widely used in applications ranging from household
+            to commercial purposes. This paper discusses about development of a semi-humanoid robot platform for speech and image
+            recognition, navigation based on Robot Operating System (ROS) which allows the users to interface the robot developed
+            to add) extra peripherals which further gives the scope for development. RIGGU is integrated with features such as 
+            speech recognition and synthesis, facial and object recognition and navigation. For  <a href="https://github.com/harshavardhanguda/rigguv2">Code</a> 
+            <a href="https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j">paper</a>
         </div>
       </div>
 
