--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Autonomous Navigation of Four Wheeled Base using Passive Encoders</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>The exchange of information performed in different ways such as speech, signals, or writing is called communication.
+            Communication in deaf and mute is performed with the use of sign languages, however, they face many difficulties at 
+            the time of interacting with the common man and computers. Research is needed in this field to bring deaf-mutes more 
+            into the light of society and to increase their interaction with the common man. Our project aims at developing a 
+            system that uses Convolutional Neural Networks(CNN) and Faster R-CNN to extract the patterns in the feature vectors 
+            of each sign of twenty-six alphabets and further uses the results to recognize those signs. A standalone device is 
+            developed by implementing the pre-trained modified VGGNet models on  Pi 3 A+ device. 
+            For  <a href="https://github.com/harshavardhanguda/stisl">Code</a> 
+            <a href="https://drive.google.com/open?id=1pBqbFqW3LJCH9vb8CIQ1wIB37hl6sOKi">paper</a>
+           </p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Autonomous Navigation of Four Wheeled Base using Passive Encoders</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Navigation of a four wheeled base using passive encoders to achieve precise indoor location of robot and implement 
             control loops for its navigation. Mathematically model the system and validate from the experimental data.</p>
           <hr>
