--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b{Drone Based Intelligent Surveillance And Disaster Management System</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>The drone has an on-board camera and processor to process the live feed of video-stream and is used in surveillance and tracking of objects/person.</p>
+          <p>Design of an autonomous Unmanned Aerial Vehicle(UAV) system to detect people in distress and send the information of
+            the people to an already established ground control station(GCS). It consists of a long range communication system to
+            communicate with GCS and a system to perform computer vision, avoid obstacles and navigate autonomously and plan its 
+            path accordingly. Further it can be used to build a swarm of such systems to cover a wider area and effectively help 
+            more people in distress. It involves development of a fully operational drone with PID control of drone, computer 
+            vision, image processing, GPS tracking and navigation, data transfer and acquisition.</p>
           <hr>
         </div>
       
