--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, RIG NITC</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>NIT Calicut, India</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>harshavardhan.guda@mail.com</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:harshavardhan.guda@gmail.com" target="_top">harshavardhan.guda@gmail.com</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+919177881640</p>
           <hr>
 
