--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b{Drone Based Intelligent Surveillance And Disaster Management System</b></h5>
+          <h5 class="w3-opacity"><b>Drone Based Intelligent Surveillance And Disaster Management System</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Design of an autonomous Unmanned Aerial Vehicle(UAV) system to detect people in distress and send the information of
             the people to an already established ground control station(GCS). It consists of a long range communication system to
