--- a/index.html
+++ b/index.html
@@ -149,21 +149,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
+          <h5 class="w3-opacity"><b>National Institute of Technology Calicut, India.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
           <p>Web Development! All I need to know in one place</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Sri Gayatri Junior College</b></h5>
+          <h5 class="w3-opacity"><b>Sri Gayatri Junior College, Hyderabad, India.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2016</h6>
-          <p>Master Degree</p>
+          <p>12<sup>th</sup> class.                   Percentage: 96.8%</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Anjali High School</b></h5>
+          <h5 class="w3-opacity"><b>Anjali High School, Suryapet, India.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelor Degree</p><br>
+          <p>Secondary School Certificate. GPA 9.8//10</p><br>
         </div>
       </div>
 
