--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>National Institute of Technology Calicut, India.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <p>Bachelor of Technology. CGPA (till sixth semester): 8.26 </p>
           <hr>
         </div>
         <div class="w3-container">
