--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>National Institute of Technology Calicut, India.</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Bachelor of Technology. CGPA (till sixth semester): 8.26 </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Sri Gayatri Junior College, Hyderabad, India.</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2016</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2014 - May 2016</h6>
           <p>12<sup>th</sup> class.                   Percentage: 96.8%</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Anjali High School, Suryapet, India.</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>passed May 2014</h6>
           <p>Secondary School Certificate. GPA 9.8//10</p><br>
         </div>
       </div>
