--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <a href="https://www.facebook.com/harshavardhan.guda" target="_top"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <a href="https://github.com/harshavardhanguda" target="_top"><i class="fa fa-github w3-hover-opacity"></i></a>
+<!--   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i> -->
+  <a href="https://www.linkedin.com/in/harsha-vardhan-guda/" target="_top"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
