--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             to commercial purposes. This paper discusses about development of a semi-humanoid robot platform for speech and image
             recognition, navigation based on Robot Operating System (ROS) which allows the users to interface the robot developed
             to add) extra peripherals which further gives the scope for development. RIGGU is integrated with features such as 
-            speech recognition and synthesis, facial and object recognition and navigation. For  <a href="https://github.com/harshavardhanguda/rigguv2">Code</a> 
-            <a href="https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j">paper</a> </p>
+            speech recognition and synthesis, facial and object recognition and navigation. For  <a href="https://github.com/harshavardhanguda/rigguv2"><font color="blue">code</font></a> 
+            <a href="https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j"> <font color="blue">paper</font> </a> </p>
           <hr>
         </div>
         
@@ -122,8 +122,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             system that uses Convolutional Neural Networks(CNN) and Faster R-CNN to extract the patterns in the feature vectors 
             of each sign of twenty-six alphabets and further uses the results to recognize those signs. A standalone device is 
             developed by implementing the pre-trained modified VGGNet models on  Pi 3 A+ device. 
-            For  <a href="https://github.com/harshavardhanguda/stisl">Code</a> 
-            <a href="https://drive.google.com/open?id=1pBqbFqW3LJCH9vb8CIQ1wIB37hl6sOKi">paper</a>
+            For  <a href="https://github.com/harshavardhanguda/stisl"><font color="blue">code</font></a> 
+            <a href="https://drive.google.com/open?id=1pBqbFqW3LJCH9vb8CIQ1wIB37hl6sOKi"><font color="blue">paper</font></a>
            </p>
           <hr>
         </div>
