--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
           <div class="w3-container">
           <h5 class="w3-opacity"><b>Sign Language to Text Conversion using Deep Neural Networks</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2018 - April 2019</h6>
           <p>The exchange of information performed in different ways such as speech, signals, or writing is called communication.
             Communication in deaf and mute is performed with the use of sign languages, however, they face many difficulties at 
             the time of interacting with the common man and computers. Research is needed in this field to bring deaf-mutes more 
