--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, RIG NITC</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Programme Manager, RIG NITC(May 2018 - April 2019)</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>NIT Calicut, India</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:harshavardhan.guda@gmail.com" target="_top">harshavardhan.guda@gmail.com</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+919177881640</p>
@@ -146,6 +147,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
       </div>
 
+  
+        <div class="w3-container w3-card w3-white">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Extracurriculars</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>National Institute of Technology Calicut, India.</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Bachelor of Technology. CGPA (till sixth semester): 8.26 </p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Sri Gayatri Junior College, Hyderabad, India.</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2014 - May 2016</h6>
+          <p>12<sup>th</sup> class.                   Percentage: 96.8%</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Anjali High School, Suryapet, India.</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>passed May 2014</h6>
+          <p>Secondary School Certificate. GPA 9.8//10</p><br>
+        </div>
+      </div>
+  
+  
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
