--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             recognition, navigation based on Robot Operating System (ROS) which allows the users to interface the robot developed
             to add) extra peripherals which further gives the scope for development. RIGGU is integrated with features such as 
             speech recognition and synthesis, facial and object recognition and navigation. For  <a href="https://github.com/harshavardhanguda/rigguv2"><font color="blue">code</font></a> 
-            <a href="https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j"> <font color="blue">paper</font> </a> </p>
+<!--             <a href="https://drive.google.com/open?id=1vHjzMZ-WHZ1U1Jf-alBCXW7l6LPH4T6j">  -->
+<!--               <font color="blue">paper</font> </a> </p> -->
           <hr>
         </div>
         
